# nstu-04-development-of-database-applications

.husky/: commit-msg  pre-commit
lab-1/: CMakeLists.txt  main.cpp  sql_executor.hpp
lab-1/__sql__/: data.sql  init.sql
lab-1/entities/: account.cpp  account.hpp  client.cpp  client.hpp  deposit.cpp  deposit.hpp
lab-1/mappers/: account_mapper.hpp  client_mapper.hpp  deposit_mapper.hpp
lab-2/: build.gradle  settings.gradle
lab-2/src/main/java/: module-info.java
lab-3/: .eslintrc.js  .gitignore  docker-compose.yml  package.json  tsconfig.json  typings.d.ts
lab-3/.meteor/: .id  packages  versions
lab-3/client/: main.css  main.html  main.tsx
lab-3/client/app/: index.tsx  routing.tsx
lab-3/client/pages/: 404.tsx  deposits.tsx  index.tsx  sign-in.tsx  sign-up.tsx  tariffs.tsx  users.tsx
lab-3/common/: user-profile.d.ts
lab-3/common/entities/: accounts.ts  roles.ts  tariffs.ts
lab-3/imports/entities/: accounts.ts  deposit.ts  tariffs.ts
lab-3/server/: main.ts
lab-3/tests/: main.ts
rgr/backend/: .gitignore  TankoffBank.sln  TankoffBank.sln.DotSettings
rgr/backend/TankoffBank.Domain/: IApplicationContext.cs  TankoffBank.Domain.csproj
rgr/backend/TankoffBank.Infrastructure/: ApplicationDbContext.cs  TankoffBank.Infrastructure.csproj
rgr/backend/TankoffBank.Services/: ClientService.cs  TankoffBank.Services.csproj  TariffService.cs
rgr/backend/TankoffBank.WebApi/: Program.cs  TankoffBank.WebApi.csproj  appsettings.Development.json
rgr/frontend/: .eslintrc.cjs  .prettierrc  package.json  tsconfig.json
rgr/frontend/src/: main.tsx
(+222 files in other folders)
